--- a/src/app/common/components/button/button.component.html
+++ b/src/app/common/components/button/button.component.html
@@ -18,7 +18,8 @@
     'm-button--iconOnly': iconOnly,
     'm-button--dropdown': !!dropdown && showDropdownMenu,
     'm-pulsating--small': pulsating,
-    'm-button-solidColor': solid
+    'm-button--flat': flat,
+    'm-button--solid': solid
   }"
 >
   <div *ngIf="!_saving" class="m-button__text--unsaved" #buttonTextContainer>
