--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -12,6 +12,7 @@
   [class.m-v3Topbar__top--noBackground]="
     !(pageLayoutService.hasTopbarBackground$ | async)
   "
+  [class.m-v3Topbar--homepageV3]="isHomePageV3"
   [class.m-v3Topbar__top--loggedOut]="!getCurrentUser()"
   [style.visibility]="showTopbar ? 'visible' : 'hidden'"
 >
@@ -30,14 +31,26 @@
             class="m-v3Topbar__logo--bulb"
           />
           <img
-            *ngIf="!(isDarkTheme$ | async)"
+            *ngIf="
+              isHomePageV3
+                ? !(isDarkTheme$ | async) &&
+                  (pageLayoutService.hasTopbarBackground$ | async)
+                : !(isDarkTheme$ | async)
+            "
             [src]="cdnAssetsUrl + 'assets/logos/logo-light-mode.svg'"
             class="m-v3Topbar__logo--full"
+            alt="Minds"
           />
           <img
-            *ngIf="isDarkTheme$ | async"
+            *ngIf="
+              isHomePageV3
+                ? (isDarkTheme$ | async) ||
+                  !(pageLayoutService.hasTopbarBackground$ | async)
+                : (isDarkTheme$ | async)
+            "
             [src]="cdnAssetsUrl + 'assets/logos/logo-dark-mode.svg'"
             class="m-v3Topbar__logo--full"
+            alt="Minds"
           />
         </a>
         <m-environmentFlag></m-environmentFlag>
@@ -65,17 +78,29 @@
           <div
             class="m-v3TopbarContainer__loginWrapper"
             [ngClass]="{
-              'm-v3TopbarContainer__loginWrapper--roundButtons': !onHomepage
+              'm-v3TopbarContainer__loginWrapper--roundButtons': isHomePageV3
+                ? true
+                : !onHomepage
             }"
           >
-            <ng-container *ngIf="!onHomepage">
+            <ng-container *ngIf="isHomePageV3 ? true : !onHomepage">
               <m-button
                 class="m-v3TopbarLoginWrapper__login"
+                [ngClass]="
+                  isHomePageV3
+                    ? {
+                        'm-v3TopbarLoginWrapper__login--white': !(
+                          pageLayoutService.hasTopbarBackground$ | async
+                        )
+                      }
+                    : undefined
+                "
                 (onAction)="onLoginClick()"
                 title="Login"
                 i18n-title="@@COMMON__LOGIN"
                 data-ref="topnav-login"
                 size="small"
+                [flat]="isHomePageV3"
               >
                 Login
               </m-button>
@@ -88,11 +113,18 @@
                 data-ref="topnav-join-now"
                 color="blue"
                 size="small"
+                [overlay]="
+                  !(pageLayoutService.hasTopbarBackground$ | async) &&
+                  isHomePageV3
+                "
+                [solid]="
+                  isHomePageV3 && pageLayoutService.hasTopbarBackground$ | async
+                "
               >
                 Join Now
               </m-button>
             </ng-container>
-            <ng-container *ngIf="onHomepage">
+            <ng-container *ngIf="isHomePageV3 ? false : onHomepage">
               <a
                 class="m-v3TopbarLoginWrapper__login"
                 (click)="onLoginClick()"
@@ -116,7 +148,7 @@
           </div>
         </ng-container>
 
-        <div class="m-v3Topbar__userMenu">
+        <div *ngIf="!onHomepage" class="m-v3Topbar__userMenu">
           <div class="m-v3Topbar__spacer"></div>
           <!-- edit -->
           <ng-content select="[icons]"></ng-content>
