--- a/src/app/common/components/button/button.component.ng.scss
+++ b/src/app/common/components/button/button.component.ng.scss
@@ -82,15 +82,7 @@
       }
     }
     &.m-button--blue {
-      @include m-theme() {
-        border-color: themed($m-link);
-      }
-      &.m-button--dropdown ::ng-deep .m-button__dropdownArrow {
-        @include m-theme() {
-          border-color: themed($m-link);
-        }
-      }
-      &.m-button-solidColor {
+      &.m-button-solid {
         @include m-theme() {
           background-color: themed($m-link);
           color: themed($m-textColor--primaryInverted);
@@ -104,6 +96,16 @@
               }
             }
           }
+        }
+      }
+      &:not(m-button--solid) {
+        @include m-theme() {
+          border-color: themed($m-link);
+        }
+      }
+      &.m-button--dropdown ::ng-deep .m-button__dropdownArrow {
+        @include m-theme() {
+          border-color: themed($m-link);
         }
       }
     }
@@ -366,7 +368,14 @@
         font-size: 9px; /* m-icon is 135% this size */
       }
     }
+
+    ///////////////////////////////////////////////////
+
+    &.m-button--flat {
+      border: none !important;
+    }
   }
+
   ///////////////////////////////////////////////////
 
   &button {
