--- a/src/app/foundation/grid.scss
+++ b/src/app/foundation/grid.scss
@@ -32,9 +32,24 @@
       .m-grid__column-#{$i}--mobile {
         grid-column: auto / span $i;
       }
+      .m-grid__order-#{$i}--mobile {
+        order: $i;
+      }
       .m-grid__column__skip-#{$i}--mobile {
         grid-column-start: $i !important;
       }
     }
+  }
+}
+
+@media screen and (max-width: $m-grid-max-mobile) {
+  .m-grid__hide--mobile {
+    display: none !important;
+  }
+}
+
+@media screen and (min-width: calc($m-grid-max-mobile + 1px)) {
+  .m-grid__only--mobile {
+    display: none !important;
   }
 }
