--- a/src/app/common/components/button/button.component.ng.scss
+++ b/src/app/common/components/button/button.component.ng.scss
@@ -82,7 +82,7 @@
       }
     }
     &.m-button--blue {
-      &.m-button-solid {
+      &.m-button--solid {
         @include m-theme() {
           background-color: themed($m-link);
           color: themed($m-textColor--primaryInverted);
