--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/swap-box/swap-box.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/swap-box/swap-box.component.html
@@ -32,15 +32,17 @@
       </div>
     </div>
 
-    <span class="material-icons m-networkSwapBox__container-swapButton">
-      swap_vert
-    </span>
+    <div class="m-networkSwapBox__swapButton--container">
+      <span class="material-icons m-networkSwapBox__swapButton">
+        swap_vert
+      </span>
+    </div>
 
     <!-- TO box -->
     <div class="mdl-grid m-networkSwapBox__container-box-bottom">
       <span
         class="m-networkSwapBox__container-box-subtitle mdl-cell mdl-cell--12-col "
-        >From</span
+        >To</span
       >
       <div class="mdl-cell mdl-cell--12-col m-networkSwapBox__container-row">
         <span
