--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/bridge-transfer/network-bridge-transfer.ng.scss
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/bridge-transfer/network-bridge-transfer.ng.scss
@@ -15,6 +15,24 @@
 
   .m-modalV2__inner {
     padding: 40px;
+    position: relative;
+
+    .m-networkSwapBridge--close {
+      position: absolute;
+      top: 16px;
+      right: 16px;
+
+      i {
+        background: #404a4e;
+        padding: 8px;
+        border-radius: 3px;
+        cursor: pointer;
+
+        @include m-theme() {
+          color: themed($m-white-always);
+        }
+      }
+    }
 
     @media (min-width: 840px) {
       .mdl-grid {
@@ -38,8 +56,7 @@
         font-size: 24px;
         line-height: 32px;
         font-weight: bold;
-        margin: 0 0 5px 0;
-        margin-top: -20px;
+        margin: 0;
 
         @include m-theme() {
           color: themed($m-textColor--primary);
@@ -66,25 +83,8 @@
         box-sizing: border-box;
         display: flex;
       }
-      .m-networkSwapBridge__header--close {
-        display: flex;
-        width: 100%;
-        justify-content: end;
-
-        i {
-          background: #404a4e;
-          padding: 8px;
-          border-radius: 3px;
-          cursor: pointer;
-
-          @include m-theme() {
-            color: themed($m-white-always);
-          }
-        }
-      }
       .m-networkSwapBridge__container-row {
         align-items: center;
-        margin-top: -20px;
 
         @media (min-width: 480px) and (max-width: 839px) {
           margin-top: -33px !important;
