--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/tx-history/network-bridge-tx-history.ng.scss
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/tx-history/network-bridge-tx-history.ng.scss
@@ -18,25 +18,54 @@
   display: contents;
 
   .m-modalV2__inner {
-    padding: 0px !important;
+    padding: 0 !important;
+    position: relative;
+
+    .m-networkSwapTxHistory__close {
+      position: absolute;
+      top: 16px;
+      right: 16px;
+
+      i {
+        background: #404a4e;
+        padding: 8px;
+        border-radius: 3px;
+        cursor: pointer;
+        @include m-theme() {
+          color: themed($m-white-always);
+        }
+      }
+    }
+
     .m-tabs__container {
-      padding-top: 0px !important;
+      padding-top: 0 !important;
 
       @media (min-width: 480px) and (max-width: 839px) {
         padding-left: 40px !important;
       }
     }
-    .m-networkSwapBridge__header {
-      .m-networkSwapBridge__header--close {
-        padding: 40px 40px 0px 40px;
-        box-sizing: border-box;
-      }
-      .m-networkSwapBridge__container-row {
-        padding: 0px 40px;
+
+    .m-networkSwapTxHistory__header {
+      display: flex;
+      flex-direction: row;
+      margin: 32px 0 24px 0;
+      padding: 0 40px;
+
+      .m-networkSwapTxHistory__title--swap {
+        font-size: 24px;
+        line-height: 32px;
+        font-weight: bold;
+        margin: 0 0 5px 0;
+        margin-top: 0px;
+        margin-left: 10px;
+
+        @include m-theme() {
+          color: themed($m-textColor--primary);
+        }
       }
     }
 
-    .m-networkSwapBridge__body {
+    .m-networkSwapTxHistory__body {
       padding: 17px 40px;
       display: inline-grid;
       width: 100%;
