--- a/src/app/modules/newsfeed/activity-v2/content/content.component.html
+++ b/src/app/modules/newsfeed/activity-v2/content/content.component.html
@@ -247,6 +247,13 @@
   </div>
 </ng-container>
 <!-- ----------------------------------- -->
+<!-- PERMALINK -->
+<!-- ----------------------------------- -->
+<m-activityV2__permalink
+  *ngIf="showPermalink"
+  class="m-activityContent__permalink"
+></m-activityV2__permalink>
+<!-- ----------------------------------- -->
 <!-- TEMPLATE: TRANSLATION -->
 <!-- ----------------------------------- -->
 <ng-template #translation>
