--- a/src/app/modules/newsfeed/activity-v2/activity.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/activity.component.ng.scss
@@ -16,17 +16,18 @@
   // ******************************************************
 
   &.m-activity--isFeed {
+    padding-bottom: $spacing4;
     @include m-theme() {
       border-top: 1px solid themed($m-borderColor--primary);
     }
 
-    .activityTop {
+    .m-activity__top {
       padding-left: $feedAvatarSpacingLeft;
-      padding-right: $feedAvatarSpacingRight;
+      padding-right: $feedSpacingRight;
 
       @media screen and (max-width: $max-mobile) {
         padding-left: $feedAvatarSpacingLeft--mobile;
-        padding-right: $feedAvatarSpacingRight--mobile;
+        padding-right: $feedSpacingRight--mobile;
       }
     }
   }
@@ -65,9 +66,16 @@
 
   &.m-activity--minimalMode {
     padding: 0;
-    @include border;
+
+    @include m-theme() {
+      border: 1px solid themed($m-borderColor--primary) !important;
+    }
+    .m-activity__top {
+      padding-top: 0;
+    }
+
     ::ng-deep .m-activityContent--paywalledStatus {
-      padding-top: 30px;
+      padding-top: 30px; //ojm
     }
     ::ng-deep .m-videoPlayer__placeholder i {
       font-size: 70px;
@@ -78,7 +86,7 @@
   // ** MODAL **
   // ******************************************************
 
-  &.m-activity--modal {
+  m-activityV2__modal & {
     padding: 0;
     @media screen and (max-width: $max-mobile) {
       padding: 0;
@@ -89,7 +97,7 @@
   // ** SIDEBAR BOOST **
   // ******************************************************
 
-  &.m-activity--isSidebarBoost {
+  m-ads-boost & {
     padding: $spacing5;
     .m-activity__rightColumn {
       width: 100%;
@@ -97,23 +105,26 @@
   }
 
   // ******************************************************
-  // ** SINGLE POST PAGE **
+  // ** SINGLE **
   // ******************************************************
 
-  &.m-activity--single {
+  m-newsfeed--single & {
     padding: 0;
     @media screen and (max-width: $max-mobile) {
       padding: 0;
     }
-    .m-activity__top {
-      padding-left: $singlePostAvatarSpacingLeft;
-      padding-right: $singlePostSpacingRight;
-      padding-top: $spacing4;
-      padding-bottom: $spacing4;
 
-      @media screen and (max-width: $max-mobile) {
-        padding-left: $singlePostAvatarSpacingLeft--mobile;
-        padding-right: $singlePostSpacingRight--mobile;
+    &:not(.m-activity--minimalMode) {
+      .m-activity__top {
+        padding-left: $singlePostAvatarSpacingLeft;
+        padding-right: $singlePostSpacingRight;
+        padding-top: $spacing4;
+        padding-bottom: $spacing4;
+
+        @media screen and (max-width: $max-mobile) {
+          padding-left: $singlePostAvatarSpacingLeft--mobile;
+          padding-right: $singlePostSpacingRight--mobile;
+        }
       }
     }
   }
@@ -178,6 +189,6 @@
   }
 
   .m-activityLeftColumn__spacer {
-    height: $spacing10;
+    height: $spacing8;
   }
 }
