--- a/src/app/modules/newsfeed/activity-v2/content/content.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/content/content.component.ng.scss
@@ -1,20 +1,102 @@
 @import 'defaults.scss';
+@import '../shared.scss';
 
 :host {
   display: block;
   width: 100%;
   position: relative;
 
-  // > * {
-  //   &:first-child {
-  //     margin-top: $spacing4; // ojm dos this work? used to be in :Host
-  //   }
-  // }
+  // ******************************************************
+  // ** MINIMAL MODE **
+  // ******************************************************
 
-  &.m-activityContent--paywalledStatus {
-    min-height: 120px;
-    padding-top: 50px;
+  // MEDIA DESCRIPTION
+  .m-activityContent__mediaDescription {
+    .m-activityContent__descriptionWrapper--minimalMode {
+      padding: $spacing4;
+
+      .m-activityContent__mediaTitle {
+        @include heading3Bold;
+        margin-bottom: 0px;
+      }
+    }
   }
+
+  // MESSAGE
+  .m-activityContent__message {
+    &.m-activityContent__message--minimalMode {
+      &.m-activityContent__message--quote {
+        .m-activityContent__messageWrapper {
+          font-weight: 400;
+          @include m-theme() {
+            border-bottom: 1px solid themed($m-borderColor--primary);
+          }
+        }
+      }
+
+      .m-activityContent__messageWrapper {
+        padding: $spacing4 !important;
+      }
+      a {
+        font-weight: 400;
+      }
+
+      &.m-activityContent__message--isTextOnly {
+        &.m-activityContent__message--short {
+          @include body1Regular;
+        }
+      }
+    }
+  }
+
+  // REMIND
+  .m-activityContent__remind {
+    &.m-activityContent__remind--minimalMode {
+      padding: 0;
+      .m-activityContent__messageWrapper {
+        padding-top: 0;
+      }
+
+      ::ng-deep m-activityV2__remind {
+        @include m-theme() {
+          border: none;
+        }
+        font-weight: 400;
+        a {
+          font-weight: 400;
+        }
+      }
+    }
+  }
+
+  // RICH EMBED
+  .m-activityContent__mediaRichEmbed--minimalMode {
+    ::ng-deep minds-rich-embed {
+      .m-rich-embed-src {
+        border: none !important;
+      }
+      a.meta {
+        padding: $minimalModeSpacing;
+
+        h2.m-rich-embed--title {
+          @include heading4Regular;
+          @include m-theme() {
+            color: themed($m-textColor--primary) !important;
+          }
+          margin: 0;
+        }
+        .m-blurb,
+        .m-url {
+          display: none;
+        }
+      }
+    }
+  }
+
+  // ******************************************************
+  // ** FIXED HEIGHT **
+  // ******************************************************
+
   &.m-activityContent--fixedHeight {
     flex: 1;
     display: flex;
@@ -32,8 +114,8 @@
       flex-direction: column;
     }
     .m-activityContent__media--image img {
-      // max-height: 100%;
-      // height: 100%;
+      max-height: 100%;
+      height: 100%;
     }
 
     .m-activityContent__remind--hasMessage & {
@@ -63,6 +145,25 @@
     }
   }
 
+  // ******************************************************
+  // **PAYWALL **
+  // ******************************************************
+
+  &.m-activityContent--paywalledStatus {
+    min-height: 120px;
+    padding-top: 50px;
+  }
+
+  // ******************************************************
+  // ** REMIND **
+  // ******************************************************
+
+  .m-activityContent__remind {
+    overflow: hidden;
+
+    padding: 0 !important;
+  }
+
   .m-activityContent__remindDeletedNotice {
     padding: 20px;
     margin: 20px;
@@ -88,28 +189,9 @@
     }
   }
 
-  .m-activityContent__remind {
-    overflow: hidden;
-
-    padding: 0 !important;
-
-    &.m-activityContent__remind--minimalMode {
-      padding: 0;
-      .m-activityContent__messageWrapper {
-        padding-top: 0;
-      }
-
-      ::ng-deep m-activityV2__remind {
-        @include m-theme() {
-          border: none;
-        }
-        font-weight: 400;
-        a {
-          font-weight: 400;
-        }
-      }
-    }
-  }
+  // ******************************************************
+  // ** TEASER **
+  // ******************************************************
 
   .m-activityContent__teaserFadeout {
     position: absolute;
@@ -131,7 +213,9 @@
     }
   }
 
-  // MEDIA ******************************************
+  // ******************************************************
+  // ** MEDIA **
+  // ******************************************************
 
   .m-activityContent__mediaDescription,
   .m-activityContent__message {
@@ -146,7 +230,9 @@
     }
   }
 
-  // IMAGE ******************************************
+  // ******************************************************
+  // ** IMAGE **
+  // ******************************************************
 
   .m-activityContent__media--image {
     &.m-activityContent__media--extraTallImage,
@@ -210,7 +296,9 @@
     }
   }
 
-  // VIDEO ******************************************
+  // ******************************************************
+  // ** VIDEO **
+  // ******************************************************
   .m-activityContent__media--video {
     ::ng-deep {
       m-videoPlayer--scrollaware {
@@ -234,40 +322,21 @@
     }
   }
 
-  .m-activityContent__media--video--modal {
-    width: 100%;
-    height: 100%;
-  }
+  // ******************************************************
+  // ** MODAL **
+  // ******************************************************
 
-  // RICH EMBED - MINIMAL MODE ************************
-  .m-activityContent__mediaRichEmbed--minimalMode {
-    // ::ng-deep minds-rich-embed {
-
-    .m-rich-embed-src {
-      border: none;
-    }
-    a.meta {
-      padding: $spacing5 $spacing4;
-      > * {
-        font-size: 15px;
-      }
-      h2 {
-        @include m-theme() {
-          color: themed($m-textColor--primary) !important;
-        }
-      }
-      .m-blurb {
-        display: none;
-      }
-      .m-url {
-        @include m-theme() {
-          color: themed($m-textColor--secondary) !important;
-        }
-      }
-      // }
+  m-activityV2__modal & {
+    .m-activityContent__media--video--modal {
+      width: 100%;
+      height: 100%;
     }
   }
-  // TEXT ******************************************
+
+  // ******************************************************
+  // ** TEXT **
+  // ******************************************************
+
   .m-activityContent__messageWrapper {
     padding: 0 0 $spacing4 0 !important;
 
@@ -299,23 +368,6 @@
         ::ng-deep m-translate .message span {
           @include heading4Medium;
         }
-      }
-    }
-    &.m-activityContent__message--minimalMode {
-      &.m-activityContent__message--quote {
-        .m-activityContent__messageWrapper {
-          font-weight: 400;
-          @include m-theme() {
-            border-bottom: 1px solid themed($m-borderColor--primary);
-          }
-        }
-      }
-
-      .m-activityContent__messageWrapper {
-        padding: $spacing4;
-      }
-      a {
-        font-weight: 400;
       }
     }
   }
@@ -357,14 +409,6 @@
     margin: 0;
     .m-activityContent__descriptionWrapper {
       padding: 0 0 $spacing4 0;
-      &.m-activityContent__descriptionWrapper--minimalMode {
-        padding: $spacing4;
-
-        .m-activityContent__mediaTitle {
-          @include heading3Bold;
-          margin-bottom: 0px;
-        }
-      }
     }
     p {
       margin: 0;
@@ -375,7 +419,7 @@
 
   .m-activityContent__mediaTitle {
     &:not(.m-activityContent__mediaTitle--noDescription) {
-      @include heading4Bold; // ojm ask michael what to do
+      @include heading4Bold;
       margin-bottom: $spacing1 !important;
     }
   }
@@ -388,8 +432,9 @@
     }
   }
 
-  /////////////////////////////////////////////////@at-root
-  // TRANSLATE
+  // ******************************************************
+  // ** TRANSLATIONS **
+  // ******************************************************
 
   ::ng-deep m-translate {
     .m-translate__visible > * {
