fix seo and scroll stutter

--- a/src/app/common/layout/v3-topbar/v3-topbar.component.scss
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.scss
@@ -382,6 +382,10 @@
       display: none;
     }
 
+    h1 {
+      margin: 0;
+    }
+
     .m-v3Topbar__logo--bulb {
       height: 36px;
       transform: translateY(
