--- a/src/app/modules/newsfeed/newsfeed.component.scss
+++ b/src/app/modules/newsfeed/newsfeed.component.scss
@@ -140,6 +140,21 @@ m-newsfeed {
   object-fit: cover;
 }
 
+.m-newsfeed__inner {
+  m-channelRecommendation {
+    margin: $minds-margin * 2 $minds-margin * -5;
+
+    @media screen and (max-width: $layoutMin3ColWidth) {
+      margin: $minds-margin * 2 $minds-margin * -2.5;
+    }
+
+    @include m-theme() {
+      border-top: 1px solid themed($m-borderColor--primary);
+      border-bottom: 1px solid themed($m-borderColor--primary);
+    }
+  }
+}
+
 .m-theme__2020 .m-newsfeed {
   .m-newsfeed__inner {
     padding: 20px 40px;
