--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -37,7 +37,7 @@
       [title]="channelRecommendationTitle"
       location="channel"
       [channelId]="service.guid$ | async"
-      [visible]="shouldShowChannelRecommendation() | async"
+      [visible]="channelRecommendationVisible$ | async"
       *ngIf="!isOwnedChannel"
     ></m-channelRecommendation>
 
