--- a/src/app/modules/suggestions/channel-recommendation/channel-recommendation.component.html
+++ b/src/app/modules/suggestions/channel-recommendation/channel-recommendation.component.html
@@ -1,5 +1,5 @@
 <div
-  style="transition: all 0.3s; overflow: hidden"
+  style="transition: all 0.3s; overflow: hidden; flex: 1;"
   [style.height.px]="_containerHeight$ | async"
   *ngIf="visible"
 >
