don't get request if experiment wasn't on

--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -33,13 +33,15 @@
     <!-- ----------------------------------------- -->
     <!-- WIDGET: CHANNEL RECOMMENDATION -->
     <!-- ----------------------------------------- -->
-    <m-channelRecommendation
-      [title]="channelRecommendationTitle"
-      location="channel"
-      [channelId]="service.guid$ | async"
-      [visible]="channelRecommendationVisible$ | async"
-      *ngIf="!isOwnedChannel"
-    ></m-channelRecommendation>
+    <ng-container *mExperiment="'channel-recommendations'; variation: true">
+      <m-channelRecommendation
+        [title]="channelRecommendationTitle"
+        location="channel"
+        [channelId]="service.guid$ | async"
+        [visible]="channelRecommendationVisible$ | async"
+        *ngIf="!isOwnedChannel"
+      ></m-channelRecommendation>
+    </ng-container>
 
     <!-- ----------------------------------------- -->
     <!-- SEARCH QUERY DISPLAY -->
