DO NOT MERGE FORCE SHOW COMPASS AT ALL TIMES

--- a/src/app/modules/compass/questionnaire-banner/questionnaire-banner.component.html
+++ b/src/app/modules/compass/questionnaire-banner/questionnaire-banner.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="show">
+<ng-container>
   <div
     class="m-compassQuestionnaire__banner"
     data-cy="social-compass-questionnaire-banner"
